<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".views.SaveArtActivity">

    <Button
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/art_image_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/art_image_hint"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/art_title_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/art_title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/art_publish_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/art_publish_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/art_description_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/art_description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/art_is_active_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_active"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/genders"
        >
        <Spinner
            android:id="@+id/art_genders_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/artist"
        >
        <Spinner
            android:id="@+id/art_artist_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/elevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/art_location"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/save_art_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        />
</LinearLayout>